# intro_to_machinelearning

./: README.md  pyproject.toml
Animation/: linear_regression_concept.py  regression_vs_classification.py
Assignment/: Final_Assignment.ipynb
Day_1/: README.md
Day_1/notebooks/: 00_python_crash_course.ipynb  01_intro_to_ml.ipynb  02_linear_regression_lab.ipynb  house_price_model.pkl  house_price_model_multi.pkl
Day_2/: README.md
Day_2/notebooks/: 01_eda_and_exploration.ipynb  02_data_preprocessing.ipynb  03_feature_engineering_and_splits.ipynb
Day_3/: README.md
Day_3/notebooks/: 01_linear_regression_lab.ipynb  02_classification_lab.ipynb  03_model_evaluation.ipynb  04_kmeans_clustering.ipynb  classification_full.ipynb  linear_regression_full.ipynb
Day_4/: README.md
Day_4/notebooks/: 01_neural_networks_intro.ipynb  02_generative_ai_overview.ipynb  03_responsible_ai.ipynb
media/Tex/: 017bc0aa45fe136d.tex  026372dd1e22f46a.tex  02c75908636d0e0b.tex  0918e8616bf339ff.tex  0dd1a707b8617d38.tex  0ee8ed7d0a552691.tex  0fad65a3017cdfa0.tex  0fbe854df36b1886.tex  1038cd621e280d59.tex  11be80ee52db9ff8.tex  129ece284b2f3fd6.tex  16760c1d03023a7e.tex  16b3c62b6359eea3.tex  16bfc2b8d28d8ea1.tex  18e1c44ab32ccbdc.tex  19faf1d48f6ff0f4.tex  1b3812bb99e1cd72.tex  1da009c85a48ea06.tex  1f914cba197eaa8c.tex  21f0deac1a7efe48.tex  23d9e628247e6fe2.tex  29162dd09701addd.tex  2930100265490d9a.tex  29d48bcf9654c693.tex  2ab2bf16b4a8c793.tex  2ae69a5215fc06eb.tex  2c9c7cbf3741f322.tex  31be16d9692d69d7.tex  31f2db3de0e7aae7.tex  33000e553fd1102c.tex  33f7dd5fefa6ae12.tex  (+155 more)
(+2 files in other folders)
